@@ -1,4 +1,5 @@
 0.3.1 - currently working on
+- [#1059] Fix: Error with strrpos in the config check
 - [#953] Change: Define LF as chr(10) and use that instead of chr(10)
 - [#935] Change: Add @author, @package and @subpackage tags to all PHP classes
 
